<resources>
    <string name="app_name">Fish</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="main_text_size">Размер текста</string>
    <string name="fish">Рыба</string>
    <string name="na">Наживка</string>
    <string name="sna">Снастик</string>
    <string name="story">Рыбацские историй</string>
    <string name="advice">Полезные советы</string>
    <string name="fish3">
    Щука самая известная и популярная рыба-хищник, живущая в пресноводных водоемах Евразии и Северной Америки. Щука ведет одиночный образ жизни, живет в прибрежной зоне, в зарослях водных растений рек и озер. Щука относится к семейству щуковые, роду щуки. В род Щуки входят пять видов рыб, три из которых (Красноперая щука, Черная щука, Щука-маскионг) водятся только на территории Северной Америки и два вида Обыкновенная щука и Амурская щука водятся на территории ,нашей страны. Щука является очень популярной рыбой среди рыболовов, особенно среди спиннингистов.

    Внешний вид
    Тело щуки
    Щука имеет торпедовидное вытянутое тело, со смещенными к хвосту плавниками. Весь облик щуки говорит о ее способности молниеносно развивать высокую скорость.

    Плавники щуки имеют закругленную форму, весь их вид говорит о прекрасных гидродинамических свойствах щуки. Длинное тело с большими спинным и анальным плавниками, мускулистый хвост дают щуке возможность быстро сниматься с места. Правда, преследовать свою добычу она может только короткими рывками.
    </string>
    <string name="fish_2">Карп – это рыба довольно внушительных размеров, относящаяся к классу лучеперых видов рыб (Actinopterygii). Поскольку класс насчитывает множество пород, которые отличаются значительными размерами и имеют биологическую значимость.</string>
    <string name="fish1">Обыкнове́нный сом[1], или европе́йский сом[1] (лат. Silurus glanis) — крупная[2] пресноводная бесчешуйчатая рыба семейства сомовых (Siluridae).

Длина тела до 5 м, масса до 400 кг (по историческим данным)[3]. Л. П. Сабанеев приводит сведения Кесслера о поимке сомов массой более 300 кг в XIX веке, в Днепре, Днестре и Одере[4]. Официально зарегистрирован пойманный сом массой 306 кг, длиной более 3 м и возрастом около 80 лет[5]. Сейчас сомы массой выше 100 кг встречаются крайне редко, тем не менее зарегистрированы случаи поимки сомов длиной более 2,5 м и массой около 150 кг[6]. Анальный плавник длинный, жировой плавник отсутствует, непарные плавники не имеют шипов.

Окрас в большинстве случаев бурый с оттенками коричнево-зелёного, брюхо белое. В зависимости от мест обитания окрас может меняться от почти чёрного до светло-жёлтого. Иногда встречаются сомы альбиносы.

Обитает в реках и озёрах Европы и Европейской части России, кроме бассейна Ледовитого океана. Обычен в Европе и в бассейне Аральского моря.

Икрометание весной в прибрежной зоне среди водной растительности. Самка откладывает икру в гнездо, которое самец охраняет. Половозрелость обычно на пятом году жизни.Существует заблуждение, что сом питается только падалью . На самом деле это не совсем так. Основной пищей сома на ранней стадии развития являются мелкие ракообразные, мальки и водные насекомые. В более зрелом возрасте, в зависимости от кормовой базы, предпочитает в рационе живую рыбу и других пресноводных животных и моллюсков. Также известны случаи нападения на водоплавающих птиц и мелких домашних животных.</string>
    <string name="advice1">
СОВЕТ 1
Собирая вещи на рыбалку, всегда хорошо подумайте, что вам понадобится, а что нет. Лишние килограммы везти не стоит, а вот ремкомплект, скажем, для велосипеда не помешает, особенно если путь предстоит не близкий. Поверьте, пару гаечных ключей много места не займут, а вот идти домой пешком (или по жаре) мало кто захочет.
        </string>
    <string name="advice2">
СОВЕТ 2
Если вы отправляетесь на незнакомый водоём, то целесообразно взять разные виды снастей чтобы не остаться без улова. Возьмите с собой подробную карту местности, чтобы хорошо ориентироваться. Если водоём большой, то можно поискать для него карту глубин - она поможет вам выбрать удачное место для ловли.
    </string>
    <string name="advice3">
СОВЕТ 3
Не забывайте брать на рыбалку подставка для удилищ. Никогда не срезайте кусты и молодые деревья для рогулек! Не стоит губить растительность. Сперва пройдитесь по берегу - быть может вы найдёте чьи-то старые рогульки. Обычно это не отнимает много времени.
    </string>
    <string name="advice4">
СОВЕТ 4
Какой бы снастью вы не ловили, в сезон открытой воды очень важно носить маскировочную одежду (отлично подходит камуфляж). Яркие цвета настораживают рыбу. Даже если вы ловите на большом удалении от берега, эта проблема остаётся важной. Во время вываживания рыба заметит вашу яркую фигуру издалека и, сделав кульбит, может сойти с крючка.
    </string>
    <string name="advice5">
СОВЕТ 5
Очень часто рыбаки оставляют подсак или багор в машине или далеко на берегу (а то и вовсе теряют). Вот и выходит, что рыба взяла, а за подсаком надо бежать невесть куда. Так и случаются обидные сходы завидных трофеев. Поэтому во время рыбалки все необходимые вещи должны быть под рукой.
    </string>
    <string name="advice6">
СОВЕТ 6
Не оставляйте после себя на берегу свалку мусора. Всегда убирайте за собой - кому приятно приехать на отдых на свалку?! На самом деле проблема уборки мусора очень важна. Зачем забрасывать берега пакетами и бутылками? Соберите мусор и отвезите в мусорный контейнер или просто, сожгите.
    </string>
    <string name="advice7">
СОВЕТ 7
Во время ловли нужно соблюдать осторожность и вести себя тихо. Это особенно важно, при ловле накоротке. Даже если вы ловите мелкую рыбёшку, не думайте, что крупная рыба не возьмёт. Быть может она уже подошла на прикормку, но не выдаёт себя из-за вашего шума. Вот пример из личного опыта: ловил уклейку, а поймал леща на 1150 - а всё благодаря тишине.
    </string>
    <string name="advice8">
СОВЕТ 8
Мелкие принадлежности удобно хранить в небольших коробочках от фотоплёнки. Чтобы всё это не перепуталось, их можно насадить на булавки. На одну булавку - вертлюжки, на другую - карабины, на третью - заводные кольца и т.д. Можно воспользоваться и небольшим магнитом. Также советую небольшие коробочки окрасить (или обклеить) в яркий цвет - так их будет проще заметить, если нечаянно обронить.
    </string>
    <string name="advice9">
СОВЕТ 9
Выбор места ловли - половина успеха на рыбалке. Если вы впервые на водоёме, то первым делом хорошо осмотритесь вокруг. Иногда можно заметить кормящуюся рыбу по кругам на воде. Полезно пройтись вдоль берега. На реке ищите резкие повороты, места с обратным течением. На озере - небольшие запруды, места с нависшими над водой деревьями, границу между водорослями и чистой водой.
    </string>
    <string name="advice10">
СОВЕТ> 10
Прикормка - тонкое дело. Летом старайтесь добавлять различные аттрактанты, осенью и зимой - лучше не экспериментировать с сильными запахами. Классическая прикормка для стоячей воды рассыпается при ударе о воду и опускается облаком мути. В зависимости от скорости течения добавляйте балласт - глину (или жирную землю).
    </string>
</resources>