<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/fish"
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/fish" />
    <item
        android:id="@+id/na"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/na" />
    <item
        android:id="@+id/sna"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/sna" />

    <item
            android:id="@+id/story"
            android:icon="@android:drawable/ic_menu_edit"
            android:title ="@string/story" />
    <item
            android:id="@+id/advice"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/advice"/>
</group>
</menu>



